# car-detection

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  api_test.py  main.py  pyproject.toml  requirements.txt
car_detection/: config.py  image_utils.py  models_utils.py
config/: train.yaml
metrics/: test_metrics.csv
notebooks/: prepare_dataset.ipynb  train_model.ipynb
templates/: index.html
